@@ -2,11 +2,11 @@ alter table hosts add maintenanceid number(20) DEFAULT '0' NOT NULL;
 alter table hosts add maintenance_status number(10) DEFAULT '0' NOT NULL;
 alter table hosts add maintenance_type number(10) DEFAULT '0' NOT NULL;
 alter table hosts add maintenance_from number(10) DEFAULT '0' NOT NULL;
-alter table hosts add ipmi_ip nvarchar2(64) DEFAULT '127.0.0.1' NOT NULL;
+alter table hosts add ipmi_ip nvarchar2(64) DEFAULT '127.0.0.1';
 alter table hosts add ipmi_errors_from number(10) DEFAULT '0' NOT NULL;
 alter table hosts add snmp_errors_from number(10) DEFAULT '0' NOT NULL;
-alter table hosts add ipmi_error nvarchar2(128) DEFAULT '' NOT NULL;
-alter table hosts add snmp_error nvarchar2(128) DEFAULT '' NOT NULL;
+alter table hosts add ipmi_error nvarchar2(128) DEFAULT '';
+alter table hosts add snmp_error nvarchar2(128) DEFAULT '';
 
 alter table hosts modify host            nvarchar2(64)           DEFAULT '';
 alter table hosts modify dns             nvarchar2(64)           DEFAULT '';
